Noah added to README

--- a/jupyter-notebooks/parse_frag_blast.ipynb
+++ b/jupyter-notebooks/parse_frag_blast.ipynb
@@ -59,10 +59,10 @@
     }
    ],
    "source": [
-    "ct=0\n",
-    "for key in results:\n",
-    "    ct+=len(results[key])\n",
-    "ct"
+    "ct=0 #set counter to 0\n",
+    "for key in results: #loop through results\n",
+    "    ct+=len(results[key]) #add to count\n",
+    "ct #print count"
    ]
   },
   {
@@ -80,12 +80,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hits = {}\n",
-    "for MG in results:\n",
-    "    if MG not in hits:\n",
-    "        hits[MG] = {}\n",
-    "    for SAG in results[MG]:\n",
-    "        hits[MG][SAG] = results[MG][SAG].loc[(results[MG][SAG][2]>=95) & (results[MG][SAG][3]>=200)].shape[0]"
+    "hits = {} #initialize hits directory\n",
+    "for MG in results: #loop through results\n",
+    "    if MG not in hits: #if not seen\n",
+    "        hits[MG] = {} #create new key in hits dictionary\n",
+    "    for SAG in results[MG]: #loop through SAG keys top level value\n",
+    "        hits[MG][SAG] = results[MG][SAG].loc[(results[MG][SAG][2]>=95) & (results[MG][SAG][3]>=200)].shape[0] #count the number of rows in blast results that have >= 95 identity and alignment lengths >= 200bp"
    ]
   },
   {
@@ -2545,7 +2545,7 @@
     }
    ],
    "source": [
-    "hits_df = hits_df.reindex(rownames.loc[:,2])[colnames.loc[:,1]]\n",
+    "hits_df = hits_df.reindex(rownames.loc[:,2])[colnames.loc[:,1]] #reorder dataframe based on that in fig. 3\n",
     "hits_df"
    ]
   },
@@ -2590,7 +2590,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MG_cts=MG_cts.transpose()[hits_df.columns.values]"
+    "MG_cts=MG_cts.transpose()[hits_df.columns.values] #transpose so it's horizontal"
    ]
   },
   {
@@ -2700,8 +2700,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hits_percent = hits_df.div(MG_cts.loc[1,])\n",
-    "hits_percent = hits_percent.multiply(100)"
+    "hits_percent = hits_df.div(MG_cts.loc[1,]) #divide hits by the number of sequences in metagenome to get proportion\n",
+    "hits_percent = hits_percent.multiply(100) #multiply by 100 to get percentage"
    ]
   },
   {
@@ -4817,11 +4817,11 @@
    ],
    "source": [
     "SAG_sizes['file'] = SAG_sizes['file'].str.strip('/vortexfs1/omics/env-bio/collaboration/genome-streamlining/data/frag_recruit/')\n",
-    "SAG_sizes['file'] = SAG_sizes['file'].str.rstrip('_filtered.')\n",
-    "SAG_sizes = SAG_sizes.set_index('file')\n",
-    "SAG_sizes = pd.DataFrame(SAG_sizes.loc[:,'sum_len'])\n",
-    "SAG_sizes = SAG_sizes.reindex(hits_percent.index.values)\n",
-    "SAG_sizes = SAG_sizes.div(1000000)\n",
+    "SAG_sizes['file'] = SAG_sizes['file'].str.rstrip('_filtered.') #this and line above strip unnecessary element from path\n",
+    "SAG_sizes = SAG_sizes.set_index('file') #set index to SAG name\n",
+    "SAG_sizes = pd.DataFrame(SAG_sizes.loc[:,'sum_len']) #retain just the length column\n",
+    "SAG_sizes = SAG_sizes.reindex(hits_percent.index.values) #reindex based on order of hits_percent\n",
+    "SAG_sizes = SAG_sizes.div(1000000) #divide by one million to set to Mb\n",
     "SAG_sizes\n"
    ]
   },
@@ -6081,7 +6081,7 @@
     }
    ],
    "source": [
-    "hits_percent_norm = hits_percent.div(list(SAG_sizes[\"sum_len\"]), axis=0)\n",
+    "hits_percent_norm = hits_percent.div(list(SAG_sizes[\"sum_len\"]), axis=0) #divide hits_percent by SAG sizes to normalize\n",
     "hits_percent_norm"
    ]
   },
@@ -6103,7 +6103,7 @@
     "import math\n",
     "import numpy as np\n",
     "from matplotlib.colors import Colormap\n",
-    "from matplotlib.colors import LogNorm"
+    "from matplotlib.colors import LogNorm #import all this good stuff"
    ]
   },
   {
@@ -6183,23 +6183,21 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(figsize=(25, 10))\n",
-    "sb.set_style(\"dark\")\n",
-    "log_norm = LogNorm(vmin=hits_percent_norm.min().min(), vmax=hits_percent_norm.max().max())\n",
-    "plot = sb.heatmap(hits_percent_norm, norm=log_norm, cmap=\"hot_r\", linewidths=0.25, linecolor=\"black\", vmin=0.00001, vmax=20, cbar_kws={\"ticks\":[0,0.0001,0.001,0.001,0.01,0.1,1,10]})\n",
-    "plt.setp(plot.set_xticklabels([]))\n",
-    "ax.set_facecolor(\"white\")\n",
-    "ax.set_ylim(len(hits_percent_norm),0)\n",
+    "fig, ax = plt.subplots(figsize=(25, 10)) #set up and specify size\n",
+    "sb.set_style(\"dark\") #set the style\n",
+    "log_norm = LogNorm(vmin=hits_percent_norm.min().min(), vmax=hits_percent_norm.max().max()) #get on log scale\n",
+    "plot = sb.heatmap(hits_percent_norm, norm=log_norm, cmap=\"hot_r\", linewidths=0.25, linecolor=\"black\", vmin=0.00001, vmax=20, cbar_kws={\"ticks\":[0,0.0001,0.001,0.001,0.01,0.1,1,10]}) #here's the meat of the plotting\n",
+    "plt.setp(plot.set_xticklabels([])) #remove x axis labels\n",
+    "ax.set_facecolor(\"white\") #empty cells are white now instead of grey\n",
+    "ax.set_ylim(len(hits_percent_norm),0) #this is needed for the top and bottom rows to not be partially cut off\n",
     "ax.axhline(25, color='black', linewidth=1.5)\n",
     "ax.axhline(29, color='black', linewidth=1.5)\n",
     "ax.axvline(43, color='black', linewidth=1.5)\n",
     "ax.axvline(44, color='black', linewidth=1.5)\n",
-    "ax.axvline(62, color='black', linewidth=1.5)\n",
-    "#cb.outline.set_color('black')\n",
-    "#cb.outline.set_linewidth(2)\n",
-    "plt.show()\n",
-    "plot = plot.get_figure()\n",
-    "plot.savefig(\"../output/plots/recreated_fig3.png\", dpi=400)\n"
+    "ax.axvline(62, color='black', linewidth=1.5) #this and four lines above manually add lines separating geographic regions\n",
+    "plt.show() #show plot\n",
+    "plot = plot.get_figure() #render figure\n",
+    "plot.savefig(\"../output/plots/recreated_fig3.png\", dpi=400) #save figure\n"
    ]
   }
  ],
